--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:app": "tsc && node dist/index.js",
+    "start:mongo": "mongod --dbpath=./data"
   },
   "author": "Denis Krylov",
   "license": "ISC",
   "dependencies": {
     "@fastify/static": "^6.5.0",
     "@types/node": "^18.8.4",
-    "fastify": "^4.8.1"
+    "fastify": "^4.8.1",
+    "mongodb": "^4.10.0"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
