--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fastify/static": "^6.5.0",
     "@types/node": "^18.8.4",
     "fastify": "^4.8.1",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
     "prettier": "2.7.1"
